--- a/dash-spv-apple-bindings/cbindgen.toml
+++ b/dash-spv-apple-bindings/cbindgen.toml
@@ -83,6 +83,7 @@ prefix_with_name = true
 "feature = mocks" = "DASH_SDK_MOCKS"
 "feature = mock-versions" = "PLATFORM_VERSION_MOCK_VERSIONS"
 "feature = platform-value" = "DPP_PLATFORM_VALUE"
+"feature = quorum_validation" = "DASHCORE_QUORUM_VALIDATION"
 "feature = state-transitions" = "DPP_STATE_TRANSITIONS"
 "feature = state-transition-json-conversion" = "DPP_STATE_TRANSITION_JSON_CONVERSION"
 "feature = state-transition-validation" = "DPP_STATE_TRANSITION_VALIDATION"
@@ -90,48 +91,3 @@ prefix_with_name = true
 "feature = std" = "PLATFORM_VALUE_STD"
 "feature = system_contracts" = "DPP_SYSTEM_CONTRACTS"
 "feature = validation" = "DPP_VALIDATION"
-
-#rename_variants = "None"
-## must_use = "MUST_USE_ENUM"
-#add_sentinel = false
-#derive_helper_methods = false
-#derive_const_casts = false
-#derive_mut_casts = false
-## cast_assert_name = "ASSERT"
-#derive_tagged_enum_destructor = false
-#derive_tagged_enum_copy_constructor = false
-#enum_class = true
-#private_default_tagged_enum_constructor = false
-
-
-#// Here we write down crate names (!) where we want to retrieve C-bindings
-#let includes = vec![
-#"dash-spv-masternode-processor".to_string(),
-#"rs-merk-verify-c-binding".to_string()
-#];
-#let config = cbindgen::Config {
-#language: cbindgen::Language::C,
-#parse: cbindgen::ParseConfig {
-#parse_deps: true,
-#include: Some(includes.clone()),
-#extra_bindings: includes.clone(),
-#expand: cbindgen::ParseExpandConfig {
-#crates: includes.clone(),
-#..Default::default()
-#},
-#..Default::default()
-#},
-#enumeration: cbindgen::EnumConfig {
-#prefix_with_name: true,
-#..Default::default()
-#},
-#braces: cbindgen::Braces::SameLine,
-#line_length: 80,
-#tab_width: 4,
-#documentation_style: cbindgen::DocumentationStyle::C,
-#include_guard: Some("dash_shared_core_h".to_string()),
-#..Default::default()
-#};
-#cbindgen::generate_with_config(&crate_dir, config)
-#.unwrap()
-#.write_to_file("../target/dash_shared_core.h");
