--- a/dash-spv-crypto/Cargo.toml
+++ b/dash-spv-crypto/Cargo.toml
@@ -12,22 +12,18 @@ generate-dashj-tests = []
 use_serde = ["serde"]
 
 [dependencies]
-bip38 = { git = "https://github.com/pankcuf/bip38", rev = "87abd21" }
-blake3 = "1.3.2"
+bip38 = { git = "https://github.com/pankcuf/bip38" }
+blake3 = "1.5"
 byte = "0.2"
 dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = ["std", "secp-recovery", "rand", "signer", "serde", "apple", "message_verification", "quorum_validation", "bls-signatures", "ed25519-dalek"], default-features = false, branch = "feat/ferment" }
-dash-spv-keychain = { workspace = true }
 
 ed25519-dalek = "2.1.1"
 log = { version = "0.4.*", features = ["std"] }
-ferment = { git = "https://github.com/dashpay/ferment", package = "ferment" }
-ferment-macro = { git = "https://github.com/dashpay/ferment", package = "ferment-macro" }
-indexmap = "2.8.0"
+ferment = { version = "0.2", package = "ferment" }
+ferment-macro = { version = "0.2", package = "ferment-macro" }
 rs-x11-hash = "0.1.8"
 serde = { version = "1.0.215", features = ["derive"], optional = true }
-simplelog = "0.12.2"
-zeroize = "1.5.7"
-bitflags = "2.9.0"
+zeroize = "1.8.1"
 
 [lib]
 name = "dash_spv_crypto"
