--- a/dash-spv-platform/Cargo.toml
+++ b/dash-spv-platform/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 publish = false
 
 [dependencies]
-anyhow = "1.0.95"
+anyhow = "1.0"
 
 dash-spv-crypto = { workspace = true }
 dash-spv-event-bus = { workspace = true }
@@ -23,11 +23,11 @@ drive-proof-verifier = { git = "https://github.com/dashpay/platform", branch = "
 platform-value = { git = "https://github.com/dashpay/platform", branch = "test/ferment", package = "platform-value", default-features = false, features = ["apple"] }
 platform-version = { git = "https://github.com/dashpay/platform", branch = "test/ferment", package = "platform-version", default-features = false, features = ["apple"] }
 
-ferment = { git = "https://github.com/dashpay/ferment", package = "ferment" }
-ferment-macro = { git = "https://github.com/dashpay/ferment", package = "ferment-macro" }
+ferment = { version = "0.2", package = "ferment" }
+ferment-macro = { version = "0.2", package = "ferment-macro" }
 
-http = { version = "0.2.12" }
-indexmap = "2.7.0"
+http = { version = "1.3.1" }
+indexmap = "2.9.0"
 tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
 
 [features]
