--- a/dash-spv-platform/Cargo.toml
+++ b/dash-spv-platform/Cargo.toml
@@ -29,6 +29,7 @@ ferment-macro = { version = "0.2", package = "ferment-macro" }
 http = { version = "1.3.1" }
 indexmap = "2.9.0"
 tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
+log = "0.4.27"
 
 [features]
 default = ["state-transitions"]
