--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 members = [
     "dash-spv-apple-bindings",
+    "dash-spv-chain",
     "dash-spv-coinjoin",
     "dash-spv-crypto",
     "dash-spv-event-bus",
@@ -9,6 +10,7 @@ members = [
     "dash-spv-macro",
     "dash-spv-masternode-processor",
     "dash-spv-platform",
+    "dash-spv-storage",
     "logging",
     "reachability",
 ]
@@ -23,6 +25,7 @@ license = "MIT"
 keywords = ["crypto", "dash", "spv"]
 
 [workspace.dependencies]
+dash-spv-chain = { version = "0.0.1", path = "dash-spv-chain" }
 dash-spv-coinjoin = { version = "0.5.1", path = "dash-spv-coinjoin" }
 dash-spv-crypto = { version = "0.5.1", path = "dash-spv-crypto" }
 dash-spv-event-bus = { version = "0.5.1", path = "dash-spv-event-bus" }
@@ -30,6 +33,7 @@ dash-spv-keychain = { version = "0.0.1", path = "dash-spv-keychain" }
 dash-spv-macro = { version = "0.1.0", path = "dash-spv-macro" }
 dash-spv-masternode-processor = { version = "0.5.1", path = "dash-spv-masternode-processor" }
 dash-spv-platform = { version = "0.1.0", path = "dash-spv-platform" }
+dash-spv-storage = { version = "0.1.0", path = "dash-spv-storage" }
 logging = { version = "0.1.0", path = "logging" }
 
 #[profile.test]
