--- a/dash-spv-platform/Cargo.toml
+++ b/dash-spv-platform/Cargo.toml
@@ -9,9 +9,12 @@ publish = false
 [dependencies]
 anyhow = "1.0"
 
+dash-spv-chain = { workspace = true }
 dash-spv-crypto = { workspace = true }
 dash-spv-event-bus = { workspace = true }
+dash-spv-keychain = { workspace = true }
 dash-spv-macro = { workspace = true }
+dash-spv-storage = { workspace = true }
 
 dashcore = { git = "https://github.com/dashpay/rust-dashcore", features = ["std", "secp-recovery", "rand", "signer", "serde", "apple", "message_verification", "quorum_validation"], default-features = false, branch = "feat/ferment" }
 dapi-grpc = { git = "https://github.com/dashpay/platform", branch = "test/ferment", package = "dapi-grpc", default-features = false, features = ["client"] }
@@ -30,6 +33,7 @@ http = { version = "1.3.1" }
 indexmap = "2.9.0"
 tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
 log = "0.4.27"
+bitflags = "2.9.1"
 
 [features]
 default = ["state-transitions"]
